<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivityBackup"
    android:background="@drawable/light_bckg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nexa_light"
        android:text="@string/register_tv_create_account"
        android:textColor="@color/black"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePic"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/gamer_avatar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_person_outline"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/nexa_regular"
            android:hint="@string/login_etUsername"
            android:inputType="text"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_open_lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/nexa_regular"
            android:hint="@string/login_etPassword"
            android:inputType="textPassword"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editTextConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_lock_repeat"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/nexa_regular"
            android:hint="@string/register_confirm_password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editTextDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_display_person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/nexa_regular"
            android:hint="@string/register_display_name"
            android:inputType="text"
            android:padding="16dp" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="#7868E6"
            android:fontFamily="@font/nexa_bold"
            android:shadowColor="@color/black"
            android:text="@string/register_sign_up_btn"
            app:rippleColor="#7868E6" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/loginSignUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.7">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_regular"
            android:text="@string/register_got_account"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/register_sign_in"
            android:textColor="#7868E6"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>